<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">NFT Maker</string>
    <string name="tokens">Tokens</string>
    <string name="my_nfts">My NFTs</string>
    <string name="create_nft">Create NFT</string>
    <string name="ipfs_upload">Choose file for upload</string>
    <string name="mint_nft">Mint NFT</string>
    <string name="total_token_supply">Total Token supply:</string>
    <string name="token_amount_creator">Token amount creator:</string>
    <string name="token_amount_receiver">Token amount receiver:</string>
    <string name="transfer_5_token">Transfer 5 Token</string>
    <string name="create_your_nft">Create your NFT</string>
    <string name="transfer_token">Transfer Token</string>
    <string name="scan_qr">Scan QR</string>
    <string name="your_ethereum_address">Your Ethereum Address</string>
</resources>